# pointercrate

./: Cargo.toml
migrations/: 20251222041114_difficulty-tiers.down.sql  20251222041114_difficulty-tiers.up.sql  20251222150831_record_enjoyments.down.sql  20251222150831_record_enjoyments.up.sql
pointercrate-core-api/: Cargo.toml
pointercrate-core-api/src/: error.rs  maintenance.rs  preferences.rs  response.rs
pointercrate-core/src/: error.rs
pointercrate-demonlist-api/: Cargo.toml
pointercrate-demonlist-api/src/: lib.rs  ratelimits.rs
pointercrate-demonlist-api/src/endpoints/: demon.rs  nationality.rs  player.rs  record.rs  submitter.rs
pointercrate-demonlist/sql/: all_demons.sql  all_demons_at.sql  demon_by_id.sql  demon_by_name.sql  demon_by_position.sql  paginate_demons_by_id.sql  paginate_demons_by_position.sql  paginate_records.sql  record_by_id.sql
pointercrate-demonlist/src/: error.rs  lib.rs
pointercrate-demonlist/src/demon/: audit.rs  get.rs  mod.rs  paginate.rs  patch.rs  post.rs
pointercrate-demonlist/src/record/: audit.rs  get.rs  mod.rs  paginate.rs  patch.rs  post.rs
pointercrate-example/: Cargo.toml
pointercrate-example/src/: main.rs
pointercrate-test/: Cargo.toml
pointercrate-test/src/: demonlist.rs  user.rs
pointercrate-user-api/: Cargo.toml
pointercrate-user-api/src/: lib.rs  ratelimits.rs
pointercrate-user-api/src/endpoints/: auth.rs  user.rs
pointercrate-user/src/: error.rs
