[package]
name = "pointercrate-example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pointercrate-demonlist-api = { path = "../pointercrate-demonlist-api", features = ["geolocation"] }
pointercrate-user-api = { version = "0.1.0", path = "../pointercrate-user-api", features = ["legacy_accounts"] }
pointercrate-core = { version = "0.1.0", path = "../pointercrate-core" }
pointercrate-core-api = { version = "0.1.0", path = "../pointercrate-core-api" }
pointercrate-demonlist = { version = "0.1.0", path = "../pointercrate-demonlist" }
pointercrate-user = { version = "0.1.0", path = "../pointercrate-user" }
rocket = { workspace = true }
unic-langid = { version = "0.9.5", features = ["macros"] }
reqwest = "0.12.24"
serde = "1.0.228"
dotenv = "0.15.0"

[features]
oauth2 = ["pointercrate-user-api/oauth2"]
geolocation = ["pointercrate-demonlist-api/geolocation"]
